# eclipse-workspace

./: .gitignore
ConcurrencyInAction/: .autotools  .cproject  .project
ConcurrencyInAction/cp04/: Environment
ConcurrencyInAction/cp04/includes/: conditionvariable.h  headers.h
ConcurrencyInAction/cp05/: CMakeLists.txt
ConcurrencyInAction/cp05/includes/: SmartMutex.h  call_once.h  headers.h  hierarchical_mutex.h  mutexfile.h  spawntask.h
ConcurrencyInAction/cp05/src/: main.cpp
